2023-07-07T08:11:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5484249818 # 984
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-07
* notice: last 14d: unq all: 35 5513
* notice: prev accum: outdated-unq outdated-all / unq all: 1474 135312 / 1542 140881
* notice: next accum: outdated-unq outdated-all / unq all: 1474 135312 / 1544 141014
* notice: prev exec diff / last date diff / accum: unq all: +2 +133 -1 -162 / +2 +133 -0 -0 / 2 133
* notice: removed / changed dates: [] / [2023-06-23 2023-07-07]

2023-07-07T00:55:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5481582765 # 983
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-07
* notice: last 14d: unq all: 35 5542
* notice: prev accum: outdated-unq outdated-all / unq all: 1471 134919 / 1541 140764
* notice: next accum: outdated-unq outdated-all / unq all: 1474 135312 / 1542 140881
* notice: prev exec diff / last date diff / accum: unq all: +1 +117 -0 -27 / +8 +409 -0 -0 / 8 409
* notice: removed / changed dates: [2023-06-22] / [2023-06-23 2023-07-06]

2023-07-06T16:11:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5477723516 # 982
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
* notice: last 14d: unq all: 34 5515
* notice: prev accum: outdated-unq outdated-all / unq all: 1471 134919 / 1541 140616
* notice: next accum: outdated-unq outdated-all / unq all: 1471 134919 / 1541 140764
* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -1 -139 / +7 +292 -0 -0 / 7 292
* notice: removed / changed dates: [] / [2023-06-22 2023-07-06]

2023-07-06T08:12:00Z: