@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-07T08:11:51Z",
-  "count" : 203,
-  "count_minmax" : [ 136, 392 ],
-  "count_decinc" : [ -189, +392 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 3 ],
-  "uniques_decinc" : [ -1, +3 ]
+  "timestamp" : "2023-07-07T16:11:11Z",
+  "count" : 63,
+  "count_minmax" : [ 63, 392 ],
+  "count_decinc" : [ -329, +392 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 3 ],
+  "uniques_decinc" : [ -2, +3 ]
 }
