@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-07-07T08:11:51Z",
+  "timestamp" : "2023-07-07T16:11:11Z",
   "count_outdated" : 135312,
   "uniques_outdated" : 1474,
-  "count" : 141014,
-  "uniques" : 1544,
+  "count" : 141155,
+  "uniques" : 1545,
   "clones" : [
     {
       "timestamp": "2023-06-23T00:00:00Z",
-      "count": 203,
-      "count_minmax": [ 136, 392 ],
-      "count_decinc": [ 189, 392 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 1, 3 ]
+      "count": 63,
+      "count_minmax": [ 63, 392 ],
+      "count_decinc": [ 329, 392 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 2, 3 ]
     },
     {
       "timestamp": "2023-06-24T00:00:00Z",
@@ -133,12 +133,12 @@
     },
     {
       "timestamp": "2023-07-07T00:00:00Z",
-      "count": 133,
-      "count_minmax": [ 133, 133 ],
-      "count_decinc": [ 0, 133 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 274,
+      "count_minmax": [ 133, 274 ],
+      "count_decinc": [ 0, 274 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
