@@ -1,11 +1,11 @@
 {
-  "count": 5513,
-  "uniques": 35,
+  "count": 5514,
+  "uniques": 36,
   "clones": [
     {
       "timestamp": "2023-06-23T00:00:00Z",
-      "count": 203,
-      "uniques": 2
+      "count": 63,
+      "uniques": 1
     },
     {
       "timestamp": "2023-06-24T00:00:00Z",
@@ -74,8 +74,8 @@
     },
     {
       "timestamp": "2023-07-07T00:00:00Z",
-      "count": 133,
-      "uniques": 2
+      "count": 274,
+      "uniques": 3
     }
   ]
 }
